[package]
name = "rust-try-catch-macros"
version = "0.1.0"
edition = "2021"
description = "try catch proc macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vrtgs/rust-try-catch"

keywords = ["try", "catch", "try-catch", "hell", "nightmare"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }